A ver si esto funca 2

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
-    "preinstall": "npm install -g ionic",
+    "prestart": "npm install -g ionic",
     "start": "ionic-app-scripts serve",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
