--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
-  },
-  "devDependencies": {
+    "zone.js": "0.8.18",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project"
